tpc交易相关修改

--- a/app/src/main/res/layout/activity_center_bargain.xml
+++ b/app/src/main/res/layout/activity_center_bargain.xml
@@ -15,10 +15,10 @@
         android:layout_height="@dimen/dp_48"
         android:layout_gravity="center_horizontal"
         android:background="@color/white"
-        app:tab_color="@color/tab_sel"
+        app:tab_color="@color/tpc_money_sel"
         app:tab_height="@dimen/dp_1"
         app:tab_show="true"
-        app:tab_text_change_color="@color/tab_text_sel"
+        app:tab_text_change_color="@color/tpc_money_sel"
         app:tab_text_default_color="@color/tab_text_nor"
         app:tab_text_type="normaltext"
         app:tab_textsize="@dimen/dp_14"
@@ -44,7 +44,7 @@
             android:layout_width="@dimen/dp_0"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#FB7C2F"
+            android:background="#0999E4"
             android:gravity="center"
             android:text="创建订单"
             android:textColor="@color/white"
@@ -56,7 +56,7 @@
             android:layout_width="@dimen/dp_0"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#408CE2"
+            android:background="#5B7091"
             android:gravity="center"
             android:text="我的订单"
             android:textColor="@color/white"
