--- a/app/src/main/res/layout/activity_order_pay_buy.xml
+++ b/app/src/main/res/layout/activity_order_pay_buy.xml
@@ -96,7 +96,7 @@
                 android:layout_below="@id/tv_pay_name"
                 android:layout_marginStart="@dimen/dp_16"
                 android:text="￥0.00"
-                android:textColor="#FB7C2F"
+                android:textColor="@color/tpc_money_sel"
                 app:layout_marginTopPercent="1%w"
                 app:layout_textSizePercent="4.2%w" />
 
@@ -206,7 +206,7 @@
                 android:layout_marginStart="@dimen/dp_16"
                 android:gravity="center_vertical"
                 android:text="确认收款"
-                android:textColor="#FB7C2F"
+                android:textColor="@color/tpc_money_sel"
                 app:layout_heightPercent="10%w"
                 app:layout_textSizePercent="3.6%w" />
 
@@ -248,7 +248,7 @@
                 android:layout_alignBottom="@id/iv_pic_select"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="@dimen/dp_16"
-                android:background="@drawable/shape_orange_bg"
+                android:background="@drawable/shape_blue_bg"
                 android:text="确认收款"
                 android:textColor="@color/white"
                 app:layout_heightPercent="10%w"
