--- a/app/src/main/res/layout/header_bar_his.xml
+++ b/app/src/main/res/layout/header_bar_his.xml
@@ -28,7 +28,7 @@
             android:gravity="center_vertical"
             android:paddingEnd="@dimen/dp_20"
             android:text="￥0"
-            android:textColor="#FB7C2F"
+            android:textColor="@color/tpc_money_sel"
             android:textSize="@dimen/dp_14" />
 
         <TextView
