--- a/app/src/main/res/layout/item_bargain_list_his.xml
+++ b/app/src/main/res/layout/item_bargain_list_his.xml
@@ -69,7 +69,7 @@
         android:layout_alignBottom="@id/iv_pic"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="@dimen/dp_16"
-        android:background="@drawable/shape_orange_bg"
+        android:background="@drawable/shape_blue_bg"
         android:gravity="center"
         android:text="买入"
         android:textColor="@color/white"
