--- a/app/src/main/res/layout/header_act_mz_banner.xml
+++ b/app/src/main/res/layout/header_act_mz_banner.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:clipChildren="false"
-    android:paddingBottom="@dimen/dp_10"
+    android:orientation="vertical"
     android:paddingTop="@dimen/dp_10">
 
 
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        app:layout_heightPercent="36%w" />
+        app:layout_heightPercent="38%w" />
+
 
 </com.zhy.android.percent.support.PercentRelativeLayout>
