--- a/app/src/main/res/layout/act_banner_title.xml
+++ b/app/src/main/res/layout/act_banner_title.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:zsr="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipChildren="false">
+    android:clipChildren="false"
+    android:orientation="vertical">
 
     <com.zhengsr.viewpagerlib.view.BannerViewPager
         android:id="@+id/loop_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/dp_0"
+        android:layout_weight="1"
         android:layout_marginEnd="@dimen/dp_10"
         android:layout_marginStart="@dimen/dp_10"
         android:clipChildren="false"
@@ -16,4 +18,18 @@
         zsr:banner_looptime="3000"
         zsr:banner_switchtime="600" />
 
-</RelativeLayout>
+
+    <com.zhengsr.viewpagerlib.indicator.ZoomIndicator
+        android:id="@+id/bottom_scale_layout"
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|center"
+        android:gravity="center"
+        android:orientation="horizontal"
+        zsr:zoom_alpha_min="0.2"
+        zsr:zoom_leftmargin="6dp"
+        zsr:zoom_max="1.2"
+        zsr:zoom_selector="@drawable/bottom_blue_circle" />
+
+</LinearLayout>
